  support redirection of any window keyboard input to the NxConsole
  (via CCallback).
* NxWM:CNxConsole:  Configures the NxConsole window to redirectin keyboard
  input to the NxConsole; redirects standard input to the NxConsole
  device driver.
* NxWM:CKeyboard:  Add a new class that implements a keyboard listener
  thread.  This thread reads from /dev/console and injects the keyboard
  input into NX.  NX will determine which window is at the top of the
  heirarchy and re-direct the keyboard input to only that top window.
  This solves an important problem with, for example, running multiple
  copies of the NxConsole:  On the copy of the NxConsole at the top of
  the heirarchy should get the keyboard input.
* UnitTests/nxwm/main.cxx: Now starts the keyboard thread if
  CONFIG_NXWM_KEYBOARD is defined.
* NxWM::CTaskbar:  After drawing the task bar, need to raise the
  application window otherwise the taskbar will be on the top and
  keyboard input will not be received by the top application.
* NxWM::CTaskbar:  Bugfix... previous window should now be minimized
  when a new window is started.  It should stay in a maximized state
  so that it will re-appear with the window above it is closed or
  minimized.
* NxWM::CHexCalculator:  Add a hexadecimal/decimal calculator
  example.
* NXWidgets::CNxTkWindow:  Back out height adjustment in the getSize()
  method.  The code was correct as it was before.
* NXWidgets::CButtonArray and NXWidgets::CGraphicsPort:  There is
  a kludge in there to handle the case where we cannot read the
  background data because the LCD does not support read operations.
  In that case, we just use the default background color.  However,
  that doesn't work either for the case where the background color
  changes when the widget is selected.  Thenthe background color
  in the font is wrong.  Fixed in CButtonArrary, but the problem
  probably exists in other places as well.
* NxWM:  Increase default spacing of icons on the Start Window.