@@ -1257,8 +1257,8 @@ CONFIG_NXFONT_SANS23X27=y
 CONFIG_NXFONT_SANS28X37=n
 CONFIG_NXFONT_SANS17X23B=n
 CONFIG_NXFONT_SANS20X27B=n
-CONFIG_NXFONT_SANS22X29B=n
-CONFIG_NXFONT_SANS28X37B=y
+CONFIG_NXFONT_SANS22X29B=y
+CONFIG_NXFONT_SANS28X37B=n
 CONFIG_NXFONT_SANS40X49B=n
 CONFIG_NXFONT_SERIF22X29=n
 CONFIG_NXFONT_SERIF29X37=n
@@ -1281,6 +1281,7 @@ CONFIG_NX_MXCLIENTMSGS=16
 # 4. Taskbar on the left
 # 5. We do have a touchscreen
 # 6. We do want the NxWM keybard listener
+# 7. Use a larger font with the calculator
 #
 CONFIG_NXWIDGETS_BPP=16
 CONFIG_NXWIDGETS_SERVERSTACK=2048
@@ -1297,6 +1298,7 @@ CONFIG_NXWM_TASKBAR_VSPACING=4
 CONFIG_NXWM_UNITTEST=y
 CONFIG_NXWM_TOUCHSCREEN=y
 CONFIG_NXWM_KEYBOARD=y
+CONFIG_NXWM_HEXCALCULATOR_FONTID=5
 
 #
 # NxConsole Configuration Settings:
